fixed gaps

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,19 +13,21 @@
 }
 
 .page.theme_dark  {
-  --main-text-color: #f1b2ce;
-  --title-color: #db00ff;
+  --font-family: "IBM Plex mono", sans-serif;
+  --bg-color: #000028;
+  --text-color: rgba(241, 178, 206, 1);
+  --accent-color: #FF0070;
   --title-shadow: #ff0070;
-  --color-hover: 1px solid rgba(255, 0, 112, 0.4);
-  --background-color: #000028;
   --background-image: url(../images/cover-image-dark.png);
-  --article-title-color: var(--background-color);
-  --section-title-color: var(--title-shadow);
-  --border-color: var(--main-text-color);
-  --corners-color: var(--title-shadow);
+  --color-hover: rgba(255, 0, 112, 0.4);
+  --text-title-color: var(--bg-color);
+  --section-heading-color: var(--title-shadow);
   --title-decor: var(--title-shadow);
-  --link-shadow: var(--title-shadow);
-  --rec-color: var(--title-shadow);
+  --title-color: #db00ff;
+  --rec-color: var(--title-shadow); 
+  --corners-color: var(--title-shadow);
+  --article-title-color: var(--bg-color); 
+  --link-shadow: var(--title-shadow); 
 }
 
 .page.theme_dark .header__rec {
