--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,11 +6,9 @@
   --font-family: "IBM Plex mono", sans-serif;
   --bg-color: #000028;
   --text-color: rgba(241, 178, 206, 1);
-  --accent-color: #FF0070;
   --title-shadow: #ff0070;
   --background-image: url(../images/cover-image-dark.png);
   --color-hover: rgba(255, 0, 112, 0.4);
-  --text-title-color: var(--bg-color);
   --section-heading-color: var(--title-shadow);
   --title-decor: var(--title-shadow);
   --title-color: #db00ff;
